sas-core/main/default/objects/Automated_Message_Outbound__mdt/Automated_Message_Outbound__mdt.object-meta.xml
<CustomObject>
    <label>IRR Automated Message Outbound</label>
    <pluralLabel>IRR Automated Message Outbounds</pluralLabel>
</CustomObject>