sas-core/main/default/objects/Automated_Message_Outbound__mdt/fields/Days_Before_Comm_Need_to_Send__c.field-meta.xml
<CustomField>
    <fullName>Days_Before_Comm_Need_to_Send__c</fullName>
    <label>Days Before Comm Need to Send</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>