sas-core/main/default/objects/Automated_Message_Outbound__mdt/fields/Is_Send_SMS__c.field-meta.xml
<CustomField>
    <fullName>Is_Send_SMS__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Send SMS</label>
    <type>Checkbox</type>
</CustomField>