sas-core/main/default/objects/Automated_Message_Outbound__mdt/fields/Outbound_Station_Arrival__c.field-meta.xml
<CustomField>
    <fullName>Outbound_Station_Arrival__c</fullName>
    <label>Outbound Station Arrival</label>
    <length>255</length>
    <type>Text</type>
</CustomField>