sas-core/main/default/objects/Automated_Message_Outbound__mdt/fields/Sms_Template_Name__c.field-meta.xml
<CustomField>
    <fullName>Sms_Template_Name__c</fullName>
    <label>SmsTemplate Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>