sas-core/main/default/objects/Automated_Message_Outbound__mdt/fields/Station_Arrival__c.field-meta.xml
<CustomField>
    <fullName>Station_Arrival__c</fullName>
    <label>Station Arrival</label>
    <length>255</length>
    <type>Text</type>
</CustomField>