sas-core/main/default/objects/Automated_Message_Outbound__mdt/fields/Station_Departure__c.field-meta.xml
<CustomField>
    <fullName>Station_Departure__c</fullName>
    <label>Station Departure</label>
    <length>255</length>
    <type>Text</type>
</CustomField>